styles/default.css
.plug-board {
  background: #ffffff;
  border: 1px black solid;
}

.plug-post {
  border: solid black 1px;
  padding: 10px 0px 0px 0px;
  margin: 5px 5px 5px 5px;
  border-radius: 5px;
}

.plug-post-body {
   border-bottom: 1px black solid;
   padding: 2px 5px 5px 5px;
}

.plug-text {
  width: 100%;
}

.plug-form label {
  margin-right: 15px;
}

.plug-post-date {
  float:right;
  padding-right: 5px;
}

.plug-post-info {
  text-align:right;
}

.plug-post-user {
  padding-left: 5px;
}
.plug-post-user:after {
  content: "@";
}

.plug-header {
  border-bottom: 1px solid black;
  background-color: #2B4E78;
  padding-left: 15px;
  color: white;
}

.plug-form {
  border-top: 1px solid black;
  padding: 10px 10px 0px 10px;
}
.plug-board {
  background: #f7f7f6;
  border: 1px black solid;
}

.plug-post {
  background:#E1DCD2;
  border: solid black 1px;
  padding: 10px 0px 0px 0px;
  margin: 5px 5px 5px 5px;
  border-radius: 5px;
}

.plug-post-body {
   border-bottom: 1px black solid;
   padding: 2px 5px 5px 5px;
}

.plug-text {
  width: 100%;
}

.plug-form label {
  margin-right: 15px;
}

.plug-post-date {
  float:right;
  padding-right: 5px;
}

.plug-post-info {
  background:#EFECE2;
  border-radius: 0px 0px 5px 5px;
  text-align:right;
}

.plug-post-user {
  padding-left: 5px;
}
.plug-post-user:after {
  content: "@";
}

.plug-header {
  border-bottom: 1px solid black;
  background-color: #2B4E78;
  padding-left: 15px;
  color: #D5AF18;
}

.plug-form {
  border-top: 1px solid black;
  padding: 10px 10px 0px 10px;
}

.plug-header h1 {
  margin: 0px;
}

.plug-error {
  color: red;
}

.appearDown {
    animation-duration: 1s;
    -moz-animation-duration: 1s;
    -webkit-animation-duration: 1s;

    animation-name: appeardown;
    -moz-animation-name: appeardown;
    -webkit-animation-name: appeardown;
}

@keyframes appeardown {
    from { opacity: 0; }
    to { opacity: 1; }
}

@-moz-keyframes appeardown {
    from { opacity: 0; }
    to { opacity: 1; }
}

@-webkit-keyframes appeardown {
    from { opacity: 0; }
    to { opacity: 1; }
}

